# ovltools

./: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/echocall/: CMakeLists.txt  echocallservice.json  echocallserviceplugin.cc  echocallserviceplugin.hh
plugins/halchat/: CMakeLists.txt  halchat.cc  halchat.hh  halchatserviceplugin.cc  halchatserviceplugin.hh
plugins/http/: CMakeLists.txt  httpservice.json  httpserviceplugin.cc  httpserviceplugin.hh
plugins/socks/: CMakeLists.txt  socksservice.json  socksserviceplugin.cc  socksserviceplugin.hh
shared/: ovldaemon.conf
src/: CMakeLists.txt  application.cc  application.hh  daemon.cc  daemon.hh  echostream.cc  echostream.hh  genid.cc  halchat.cc  halchat.hh  httpproxy.cc  httpsrv.cc  httpstatus.cc  httpstatus.hh  main.cc  ovlupnp.cc  qhal.cc  qhal.hh  settings.cc  settings.hh  sockswhitelist.cc  sockswhitelist.hh
